fixed issue where observation view sliding in would be visible before map tiles are shown

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -300,6 +300,7 @@ a {
   flex: 2;
   position: relative;
   order: 2;
+  z-index: 4;
 }
 
 .leaflet-map {
